--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "helmet": "^1.3.0",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.7",
+    "socket.io": "^1.4.5",
     "static-favicon": "^2.0.0-alpha"
   }
 }
