--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "favicon": "0.0.2",
     "helmet": "^1.3.0",
     "method-override": "^2.3.5",
+    "moment": "^2.12.0",
     "mongoose": "^4.4.7",
+    "mongoose-moment": "^0.1.0",
     "socket.io": "^1.4.5",
     "static-favicon": "^2.0.0-alpha"
   }
