--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-load": "^1.1.15",
     "favicon": "0.0.2",
     "helmet": "^1.3.0",
+    "jsonwebtoken": "^5.7.0",
     "method-override": "^2.3.5",
     "moment": "^2.12.0",
     "mongoose": "^4.4.7",
