--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "method-override": "^2.3.5",
     "moment": "^2.12.0",
     "mongoose": "^4.4.7",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
     "socket.io": "^1.4.5",
     "static-favicon": "^2.0.0-alpha"
   }
