--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/TL-Developer/napoles-pizzaria",
   "dependencies": {
+    "angular-ui-bootstrap": "^1.3.0",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
